// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots PriorityNav Custom DropdownList 1`] = `
<div
  className="PriorityNav_Root"
  style={
    Object {
      "minWidth": "250px",
    }
  }
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": Array [
          "
  .PriorityNav_Root {
    position: relative;
    white-space: nowrap;
  }
  .PriorityNav_Main {
    display: inline-block;
  }
  .PriorityNav_Item {
    display: inline-block;
  }
  .PriorityNav_Button {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    &:hover {
      color: #999;
    }
  }
",
        ],
      }
    }
  />
  <div
    className="PriorityNav_Main"
  >
    <div
      className="PriorityNav_Item"
      style={
        Object {
          "padding": 0,
        }
      }
    >
      <button>
        I'm a Button ⏹ ️
      </button>
    </div>
    <div
      className="PriorityNav_Item"
      style={
        Object {
          "padding": 0,
        }
      }
    >
      <a>
        This is Link 🔗
      </a>
    </div>
    <div
      className="PriorityNav_Item"
      style={
        Object {
          "padding": 0,
        }
      }
    >
      <div>
        I'm a Div!
      </div>
    </div>
    <div
      className="PriorityNav_Item"
      style={
        Object {
          "padding": 0,
        }
      }
    >
      <div>
        Looooong Div🐢🐢🐢🐢
      </div>
    </div>
    <div
      className="PriorityNav_Item"
      style={
        Object {
          "padding": 0,
        }
      }
    >
      <div
        onClick={[Function]}
      >
        🉑
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots PriorityNav Custom Icon 1`] = `
Array [
  <div
    className="PriorityNav_Root"
    style={
      Object {
        "minWidth": "250px",
      }
    }
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": Array [
            "
  .PriorityNav_Root {
    position: relative;
    white-space: nowrap;
  }
  .PriorityNav_Main {
    display: inline-block;
  }
  .PriorityNav_Item {
    display: inline-block;
  }
  .PriorityNav_Button {
    display: inline-block;
    vertical-align: middle;
    cursor: pointer;
    &:hover {
      color: #999;
    }
  }
",
          ],
        }
      }
    />
    <div
      className="PriorityNav_Main"
    >
      <div
        className="PriorityNav_Item"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <button>
          I'm a Button ⏹ ️
        </button>
      </div>
      <div
        className="PriorityNav_Item"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <a>
          This is Link 🔗
        </a>
      </div>
      <div
        className="PriorityNav_Item"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <div>
          I'm a Div!
        </div>
      </div>
      <div
        className="PriorityNav_Item"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <div>
          Looooong Div🐢🐢🐢🐢
        </div>
      </div>
      <div
        className="PriorityNav_Item"
        style={
          Object {
            "padding": 0,
          }
        }
      >
        <div>
          🉑
        </div>
      </div>
    </div>
  </div>,
  .c0 {
  max-width: 400px;
  background: #f5f5f5;
  border: 1px solid #e8e8e8;
  border-radius: 4px;
  position: absolute;
}

<div
    className="c0"
  />,
]
`;
